forbid optional parameter in supercommand